--- a/tagManage.html
+++ b/tagManage.html
@@ -23,9 +23,10 @@
     }
     </style>
 </head>
-<body style="min-width: 750px; background-color: #778899" id="why">
+<!-- #778899" -->
+<body style="min-width: 750px; background-color: #AED4E6" id="why">
     <script src="tagManager.js"></script>
-    <h1 class="p-2 d-inline-flex" id="anch">Tag Manager</h1>
+    <h1 class="p-2 d-inline-flex" id="anch"></h1>
     <div id="titles" class="row px-3"></div>
     <div id="grid" class=" p-4" ></div>
 
