--- a/tagManage.html
+++ b/tagManage.html
@@ -14,21 +14,56 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Document</title>
     <style>
-    .stickyT {
+    .stickyY {
         position: fixed;
         top: 0;
-        width: 98.65%;
-        margin-right: 10px;
+        margin-left: 9px;
         z-index: 1;
     }
+    .stickyX {
+        position: fixed;
+        top: 0px;
+        z-index: 2;
+        margin-left: 9px;
+    }
+    .gridStickY {
+      padding: 60px;
+    }
+
     </style>
 </head>
 <!-- #778899" -->
-<body style="min-width: 750px; background-color: #AED4E6" id="why">
+<!-- AED4E6 -->
+<!-- 5BC0EB -->
+<body style="min-width: 750px; background-color: #D3D3D3" id="why">
     <script src="tagManager.js"></script>
-    <h1 class="p-2 d-inline-flex" id="anch"></h1>
-    <div id="titles" class="row px-3"></div>
-    <div id="grid" class=" p-4" ></div>
+    <nav id="navBar" class="navbar navbar-expand-lg navbar-light bg-light">
+      <img style="height: 45px; padding-right: 10px;"src="images/BW@8x.png" alt="Logo">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item ">
+              <a class="nav-link" id="homePage" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" id="tagPage" href="#">Tag manager</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="optionsPage" href="#">Options</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
+    <div id="grid" class="px-4 py-2" style="overflow-x: visible;">
+      <!-- <div id="showingTags" class="mb-2 p-2"style="background-color: cornflowerblue;">
+        <div class="d-inline-flex p-2" style="border-radius: 0.8em; background-color: cyan; font-size: x-large;">Hey there</div>
+        <div class="d-inline-flex p-2" style="border-radius: 0.8em; background-color: cyan; font-size: x-large;">Hey there</div>
+        <div class="d-inline-flex p-2" style="border-radius: 0.8em; background-color: cyan; font-size: x-large;">Hey there</div>
+        <div class="d-inline-flex p-2" style="border-radius: 0.8em; background-color: cyan; font-size: x-large;">Hey there</div>
+      </div> -->
+    </div>
 
 </body>
 </html>
