added search tags functionality sort of

--- a/newTab.html
+++ b/newTab.html
@@ -26,7 +26,7 @@
     position: absolute !important;
     top: 15% !important;
     width: 80% !important;
-    transition: all 1s;
+    transition: all 0.5s;
   }
 
   #bod{
@@ -55,7 +55,7 @@
       position: relative !important;
       top: 20% !important;
       overflow: scroll;
-      transition: all 1s;
+      transition: all 0.5s;
   }
 
   ::-webkit-scrollbar-track
@@ -216,7 +216,7 @@
             <div class="modal-body" id="infoModal">
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
               <button type="button" class="btn btn-primary" id="saveChangesInfoModal" data-dismiss="modal">Save & Close</button>
             </div>
         </div>
