fixed bug with tag adder

--- a/newTab.html
+++ b/newTab.html
@@ -155,7 +155,7 @@
   </nav>
     <div id="searchContainer"class="d-flex flex-row" style="position: relative; top: 20%;">
       <i id="homeButton" class="material-icons pt-2" style="font-size: 50px; margin-left: 2%; margin-right: 1%;">home</i>
-      <input class="form-control" id="searchButton" type="text" placeholder="Search" aria-label="Search" style="border-radius: 1.5em; font-size: xx-large;opacity: 0.7;margin-left: 1px; width: 68%;" autocomplete="off">
+      <input class="form-control" id="searchButton" type="text" placeholder="Search Bookmarks" aria-label="Search" style="border-radius: 1.5em; font-size: xx-large;opacity: 0.7;margin-left: 1px; width: 68%;" autocomplete="off">
         <button id="dropdownButton" type="button" class="btn dropdown-toggle btn-m mx-3 mt-2 py-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="width: 160px;height: 80%; font-size: x-large;font-weight: 300; border-radius: 1.5em;">Filter</button>
         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" style="border-radius: 1.5em;">
           <li><a class="dropdown-item dropdown-sort" href="#" style="width: 160px; border-radius: 1.5em;" id="Default">Default</a></li>
@@ -222,7 +222,7 @@
         </div>
       </div>
     </div>
-    <div id="bookmarks" style="position: relative; top: 35%; margin-left: 2%; overflow-x: hidden;">
+    <div id="bookmarks" style="position: relative; top: 25%; margin-left: 2%; overflow-x: hidden;">
 
     </div>
 
