removed deselect in options page

--- a/newTab.html
+++ b/newTab.html
@@ -160,7 +160,7 @@
         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" style="border-radius: 1.5em;">
           <li><a class="dropdown-item dropdown-sort" href="#" style="width: 160px; border-radius: 1.5em;" id="Default">Default</a></li>
           <li><a class="dropdown-item dropdown-sort" href="#" id="Popular">Popular</a></li>
-          <li><a class="dropdown-item dropdown-sort" href="#" id="newestFirst">Newest first</a></li>
+          <li><a class="dropdown-item dropdown-sort" href="#" id="newestFirst">Newly added</a></li>
           <li class="dropdown-submenu"><a id="dropdownTag"class="dropdown-item dropdown-toggle" href="#" >Tags</a>
             <ul class="dropdown-menu tagMenu" id="tagMenu" style="overflow: auto; border-radius: 1.5em;">
             </ul>
