--- a/options.html
+++ b/options.html
@@ -73,9 +73,6 @@
                   <input id="selectAll" type="checkbox">
                   <div class="d-inline-flex mx-4">Select all</div>
                 </div>
-                <!-- <div id="deselectDiv" class="m-3" style="flex-direction: row;">
-                  <div id="deSelect" class="d-inline-flex mx-5 btn btn-secondary">Deselect</div>
-                </div> -->
 
               </div>
             </div>
@@ -108,8 +105,7 @@
               <div class="btn btn-success m-2 col-7 mr-auto" id="confirmButton" >Confirm</div>
               <div class="btn btn-info m-2 col-4 ml-auto" id="resetButton">Reset Colours</div>
             </div>
-            <!-- <div id="flipCol" class="btn-outline-success btn d-flex m-3 justify-content-center">Flip colours</div> -->
-            <div id="preview" class="btn-outline-success btn d-flex m-3 justify-content-center">Show preview</div>
+            <div id="flipCol" class="btn-outline-success btn d-flex m-3 justify-content-center">Flip colours</div>
               <div id="toggling" style="display: none;">
               <div class="mr-auto m-2">Preview</div>
               <div id="demoBackground" style="background-color: hotpink; width:100%; height: 100%; border-radius: 1em; padding: 5px;">
