--- a/options.html
+++ b/options.html
@@ -118,7 +118,7 @@
       </div>
 
       <div id="memoryOption" class="row" style="justify-content: center; display: none;">
-        <div class="col-md-5 mx-2" style="margin-top: 50px;">
+        <div class="col-md-5 mx-2" style="margin-top: 50px; background-color: #DCDCDC;border-radius: 1em; border: 1px solid #A9A9A9;">
           <!-- <div class="d-flex justify-content-center p-2 my-2 btn" style="font-size: xx-large;background-color: #5F9EA0;">Reset storage</div> -->
           <div class="d-flex flex-row my-4">
             <div class="optBut m-2">Press this button to remove all the tags that you have allocated to a bookmark</div>
@@ -132,12 +132,12 @@
       </div>
 
       <div id="configurationOption" class="row" style="justify-content: center; display: none;">
-        <div class="col-md-5 mx-2" style="margin-top: 50px;">
+        <div class="col-md-5 mx-2" style="margin-top: 50px; background-color: #DCDCDC;border-radius: 1em; border: 1px solid #A9A9A9;">
           <!-- <div class="d-flex justify-content-center p-2 my-2 btn" style="font-size: xx-large;background-color: #5F9EA0;">Reset storage</div> -->
           <div class="d-flex flex-row my-4">
             <div class="optBut m-2">What display would you like to appear when clicking the home icon</div>
           </div>
-          <div class="row">
+          <div class="row p-3">
             <div id="defaultHomeAction" class="btn btn-warning flex-fill m-2">Default</div>
             <div id="popularHomeAction" class="btn btn-warning flex-fill m-2">Popular</div>
           </div>
