--- a/newTab.html
+++ b/newTab.html
@@ -23,10 +23,9 @@
     <!-- For picking colours  -->
   <style>
     .searchContainerFocus{
-    position: absolute !important;
+    position: relative !important;
     top: 10% !important;
-    width: 80% !important;
-    transition: all 0.5s;
+    transition: all 1s;
   }
 
   #bod{
@@ -53,9 +52,9 @@
 
   .divFocus{
       position: relative !important;
-      top: 20% !important;
+      top: 13% !important;
       overflow: scroll;
-      transition: all 0.5s;
+      transition: all 1s;
   }
 
   ::-webkit-scrollbar-track
