--- a/newTab.html
+++ b/newTab.html
@@ -24,7 +24,7 @@
   <style>
     .searchContainerFocus{
     position: relative !important;
-    top: 10% !important;
+    top: 12% !important;
     transition: all 1s;
   }
 
@@ -52,9 +52,15 @@
 
   .divFocus{
       position: relative !important;
-      top: 13% !important;
+      top: 12% !important;
       overflow: scroll;
       transition: all 1s;
+  }
+  .middleLine{
+    position: relative;
+    top: 12% !important;
+    margin: 5px;
+    transition: all 1s
   }
 
   ::-webkit-scrollbar-track
@@ -134,80 +140,32 @@
 </head>
 <body id="bod" style="overflow: hidden;">
     <script src="main.js"></script>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <img style="height: 45px; padding-right: 10px;"src="images/BW@8x.png" alt="Logo">
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" id="homePage" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="tagPage" href="#">Tag manager</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="optionsPage" href="#">Options</a>
-          </li>
-        </ul>
-      </div>
-      
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-  </nav>
-    <div id="searchContainer"class="d-flex flex-row" style="position: relative; top: 15%;">
-      <i id="homeButton" class="material-icons pt-2" style="font-size: 50px; margin-left: 2%; margin-right: 1%;">home</i>
-      <input class="form-control" id="searchButton" type="text" placeholder="Search Bookmarks" aria-label="Search" style="border-radius: 1.5em; font-size: xx-large;opacity: 0.7;margin-left: 1px; width: 68%;" autocomplete="off">
-        <button id="dropdownButton" type="button" class="btn dropdown-toggle btn-m mx-3 mt-2 py-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="width: 160px;height: 80%; font-size: x-large;font-weight: 300; border-radius: 1.5em;">Filter</button>
-        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" style="border-radius: 1.5em;">
-          <li>
-            <div class="d-flex">            
-              <i id="pin_default" class="material-icons ml-1 mt-1" style="color: #555;">push_pin</i>
-              <a class="dropdown-item dropdown-sort" href="#" style="width: 160px; border-radius: 1.5em;" id="Default">Default</a>
+    <div id="searchContainer" class="d-flex" style="position: relative; top: 17%;">
+      <input class="form-control d-inline-flex" id="searchButton" type="text" placeholder="Search Bookmarks" aria-label="Search" style="border-radius: 1.5em; font-size: xx-large;opacity: 0.7; width: 68%;margin: auto;" autocomplete="off">        
+    </div>
+    <div id="middleLine" style="background-color: grey;position: relative; top: 18%; height: 4.5%; width: 80%; border-radius: 20px; margin-left: auto; margin-right: auto;"></div>
+
+    <div class="modal fade" id="manage_tags" tabindex="-1" role="dialog" aria-labelledby="allTagsModalTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+              <h5 id="modalTagTitle" class="modal-title">Manage tags</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
-          </li>
-          <li>
-            <div class="d-flex"> 
-              <i id="pin_popular" class="material-icons ml-1 mt-1" style="color: #555;">push_pin</i>
-              <a class="dropdown-item dropdown-sort" href="#" id="Popular">Popular</a>
+            <div class="modal-body" id="modal-tag-information">
+              <div id="manage_tags_place" class="pb-1"></div>
+              <div class="d-flex">
+                <input type="text" class="form-control" style="width: 100%;" id="newTagName" placeholder="Tag name" autocomplete="off">
+                <button id="addNewTagButton" class="btn btn-success ml-1">Enter</button>
+              </div>
             </div>
-          </li>
-          <li>
-            <div class="d-flex"> 
-              <i id="pin_recent" class="material-icons ml-1 mt-1" style="color: #555;">push_pin</i>
-              <a class="dropdown-item dropdown-sort" href="#" id="newestFirst">Recently added</a>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
-          </li>
-          <li class="dropdown-submenu"><a id="dropdownTag"class="dropdown-item dropdown-toggle" href="#" >Tags</a>
-            <ul class="dropdown-menu tagMenu" id="tagMenu" style="overflow: auto; border-radius: 1.5em;">
-            </ul>
-          </li>
-          <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" id="dropdownFolder" href="#" style="z-index: 2; border-radius: 1.5em;">Folders</a>
-            <ul class="dropdown-menu folderMenu" id="folderMenu" style="overflow: auto; height: 300px; border-radius: 1.5em;">
-            </ul>
-          </li>
-        </ul>
-        <div class="modal fade" id="manage_tags" tabindex="-1" role="dialog" aria-labelledby="allTagsModalTitle" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                  <h5 id="modalTagTitle" class="modal-title">Manage tags</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body" id="modal-tag-information">
-                  <div id="manage_tags_place" class="pb-1"></div>
-                  <div class="d-flex">
-                    <input type="text" class="form-control" style="width: 100%;" id="newTagName" placeholder="Tag name" autocomplete="off">
-                    <button id="addNewTagButton" class="btn btn-success ml-1">Enter</button>
-                  </div>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-          </div>
         </div>
+      </div>
     </div>
     <div class="modal fade" id="errorMessage" tabindex="-1" role="dialog" aria-labelledby="messages" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
@@ -254,10 +212,9 @@
         </div>
       </div>
     </div>
-    <div id="bookmarks" style="position: relative; top: 20%; margin-left: 2%; overflow-x: hidden;">
-    <!-- <div id="bookmarks" style="position: relative; width:80%;top: 30%; margin: auto; overflow-x: hidden; background-color: white; border-radius: 2em; padding-left: 4%;"> -->
+    <!-- <div id="bookmarks" style="position: relative; top: 20%; margin-left: 2%; overflow-x: hidden;"> -->
+    <div id="bookmarks" style="position: relative; width:80%;top: 19%; margin: auto; overflow-x: hidden; background-color: white; border-radius: 2em; padding-left: 4%;"></div>
 
-    </div>
 
 
 </body>
