--- a/newTab.html
+++ b/newTab.html
@@ -65,25 +65,19 @@
 
   ::-webkit-scrollbar-track
   {
-    box-shadow: black;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #F5F5F5;
-
+    opacity: 0.4;
   }
 
   ::-webkit-scrollbar
   {
-    width: 15px;
-    background-color: #F5F5F5;
-    display: none;
-
+    opacity: 0.4;
   }
 
   ::-webkit-scrollbar-thumb
   {
     box-shadow: black;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
+    border-radius: 20px;
   } 
 
   .dropdownButton {
