--- a/newTab.html
+++ b/newTab.html
@@ -106,7 +106,7 @@
 
   .dropdown-submenu>.dropdown-menu {
       top:0px;
-      left:99.7%;
+      left:-15em;
       /* left:-10rem; 10rem is the min-width of dropdown-menu */
       margin-top:-6px;
       border-radius: 0rem 0.25rem 0.25rem 0.25rem ;
@@ -115,7 +115,7 @@
   /* rotate caret on hover */
   .dropdown-menu > li > a:hover:after {
       text-decoration: underline;
-      transform: rotate(-90deg);
+      transform: rotate(90deg);
   } 
 
   .folder{
@@ -137,7 +137,7 @@
     <div id="searchContainer" class="d-flex" style="position: relative; top: 17%;">
       <input class="form-control d-inline-flex" id="searchButton" type="text" placeholder="Search Bookmarks" aria-label="Search" style="border-radius: 1.5em; font-size: xx-large;opacity: 0.7; width: 68%;margin: auto;" autocomplete="off">        
     </div>
-    <div id="middleLine" style="position: relative; top: 18%; height: 4.5%; width: 80%; border-radius: 20px; margin-left: auto; margin-right: auto;"></div>
+    <div id="middleLine" style="position: relative; top: 18%; height: 4.5%; width: 80%; border-radius: 20px; margin-left: auto; margin-right: auto; padding-bottom: 5px;"></div>
 
     <div class="modal fade" id="manage_tags" tabindex="-1" role="dialog" aria-labelledby="allTagsModalTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
