--- a/options.html
+++ b/options.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title>Options page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -25,27 +25,8 @@
 </style>
 
 
-<body >
+<body>
     <script src="options.js"></script>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <img style="height: 45px; padding-right: 10px;"src="images/BW@8x.png" alt="Logo">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" id="homePage" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="tagPage" href="#">Tag manager</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" id="optionsPage" href="#">Options</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
     <div id="top" class="jumbotron" style="height: 15px; padding: 0px; background-color: transparent;">
       <div id="alertz" class="alert alert-dismissible alert-success m-4 collapse"></div>
       <div id="alertx" class="alert alert-dismissible alert-danger m-4 collapse"></div>
@@ -53,7 +34,11 @@
 
 
     <div class="container" style="max-width: none;">
-      <h1 style="font-size: xxx-large;text-align: center; font-weight: 700;">Options page</h1>
+      <div class="row ">
+        <i id="homePage" class="material-icons" style="font-size: 80px; margin-left: 15px;margin-bottom: 10px;">arrow_back</i>
+        <h1 class="d-flex" style="font-size: xxx-large;text-align: center; font-weight: 700; margin: auto;">Options page</h1>
+
+      </div>
       <div class="row">
         <div id="colourButton" class="btn flex-fill m-2 p-2 focused" style="text-align: center;">Colours</div>
         <div id="memoryButton" class="btn  flex-fill m-2 p-2" style="text-align: center;">Memory</div>
