made the filter bar fully functional

--- a/newTab.html
+++ b/newTab.html
@@ -24,7 +24,7 @@
   <style>
     .searchContainerFocus{
     position: relative !important;
-    top: 12% !important;
+    top: 11% !important;
     transition: all 0.5s;
   }
 
@@ -52,13 +52,13 @@
 
   .divFocus{
       position: relative !important;
-      top: 12% !important;
+      top: 11.5% !important;
       overflow: scroll;
       transition: all 0.5s;
   }
   .middleLine{
     position: relative;
-    top: 12% !important;
+    top: 11% !important;
     margin: 5px;
     transition: all 0.5s
   }
@@ -137,7 +137,7 @@
     <div id="searchContainer" class="d-flex" style="position: relative; top: 17%;">
       <input class="form-control d-inline-flex" id="searchButton" type="text" placeholder="Search Bookmarks" aria-label="Search" style="border-radius: 1.5em; font-size: xx-large;opacity: 0.7; width: 68%;margin: auto;" autocomplete="off">        
     </div>
-    <div id="middleLine" style="position: relative; top: 18%; height: 4.5%; width: 80%; border-radius: 20px; margin-left: auto; margin-right: auto; padding-bottom: 5px;"></div>
+    <div id="middleLine" style="position: relative; top: 18%; height: 4.5%; width: 80%; border-radius: 20px; margin-left: auto; margin-right: auto; margin-bottom: 5px; margin-top: 2px;"></div>
 
     <div class="modal fade" id="manage_tags" tabindex="-1" role="dialog" aria-labelledby="allTagsModalTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
