--- a/newTab.html
+++ b/newTab.html
@@ -212,7 +212,21 @@
         </div>
       </div>
     </div>
-    <!-- <div id="bookmarks" style="position: relative; top: 20%; margin-left: 2%; overflow-x: hidden;"> -->
+    <div class="modal fade" id="updateMessage" tabindex="-1" role="dialog" aria-labelledby="messages" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+              <h5 id="updateTitle" class="modal-title">Update</h5>
+            </div>
+            <div class="modal-body" id="updateBodyModal">
+                <div id="updateBody"></div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+      </div>
+    </div>
     <div id="bookmarks" style="position: relative; width:80%;top: 19%; margin: auto; overflow-x: hidden; background-color: white; border-radius: 2em; padding-left: 4%;"></div>
 
 
