--- a/options.html
+++ b/options.html
@@ -11,7 +11,7 @@
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- For fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    <meta name="google" content="notranslate">
 </head>
 <style>
     .optBut {
