--- a/newTab.html
+++ b/newTab.html
@@ -213,13 +213,21 @@
       </div>
     </div>
     <div class="modal fade" id="updateMessage" tabindex="-1" role="dialog" aria-labelledby="messages" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
               <h5 id="updateTitle" class="modal-title">Update</h5>
             </div>
             <div class="modal-body" id="updateBodyModal">
-                <div id="updateBody"></div>
+                <div id="updateBody">
+                  <video src="videos/expand scroll.mp4" width="600px" height="320px" controls></video>
+                  <video src="videos/Change col.mp4" style="display: none;" width="600px" height="340px" controls></video>
+                  <video src="videos/show tags.mp4" style="display: none;" width="600px" height="320px" controls></video>
+                  <video src="videos/add pin.mp4" style="display: none;" width="600px" height="320px" controls></video>
+                  <video src="videos/deleting pins.mp4" style="display: none;"width="600px" height="320px" controls></video>
+
+
+                </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
